--- a/naped.Rmd
+++ b/naped.Rmd
@@ -2,4 +2,4 @@
 title: "Autoavaliação NAPED"
 ---
 
-<iframe src="https://forms.office.com/r/DJEmpGyFLS" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe> 
+<iframe src="https://forms.office.com/r/DJEmpGyFLS" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0"></iframe> 
